--- a/src/storybook/stand-alone-documentaion/round-corners/rounded-corner/rounded-corner.module.scss
+++ b/src/storybook/stand-alone-documentaion/round-corners/rounded-corner/rounded-corner.module.scss
@@ -4,7 +4,7 @@
 @import "../../../../styles/typography";
 
 .rounded-corner-component {
-  @include vibe-text(medium, bold);
+  @include vibe-text(text1, bold);
   color: var(--primary-text-color);
   display: flex;
   justify-content: center;
