--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -29,7 +29,7 @@ $small-empty-state-height: 12px;
 
         // if class is a heading class
         @if str-slice($class-prefix, 1, 1) == "h" {
-          @include vibe-title($class-prefix, $weight-type);
+          @include vibe-heading($class-prefix, $weight-type);
         }
         @else {
           @include vibe-text($class-prefix, $weight-type);
@@ -64,17 +64,17 @@ $textClasses: (
 
 @mixin label-text {
   @include smoothing-text;
-  @include vibe-text(small, normal);
+  @include vibe-text(text2, normal);
 }
 
 // Caption / Subtext (small)
 @mixin font-caption {
-  @include vibe-text(small, normal);
+  @include vibe-text(text2, normal);
   @include smoothing-text;
 }
 
 @mixin font-input {
-  @include vibe-text(small, normal);
+  @include vibe-text(text2, normal);
 }
 
 @mixin line-clamp($lines: 1le) {
