--- a/src/components/IconButton/__stories__/iconButton.stories.module.scss
+++ b/src/components/IconButton/__stories__/iconButton.stories.module.scss
@@ -4,7 +4,7 @@
 .recycleBin {
   border: 1px solid var(--ui-border-color);
   border-radius: var(--border-radius-small);
-  @include vibe-text(medium, normal);
+  @include vibe-text(text1, normal);
   height: 94px;
 
   &TitleContainer {
