feat(Badge): design review - add border option to Badge

--- a/src/components/Badge/Badge.module.scss
+++ b/src/components/Badge/Badge.module.scss
@@ -68,5 +68,11 @@ $circularPosition: 15%;
         translate: -100% -50%;
       }
     }
+
+    &.border {
+      border: 1px solid transparent;
+      border-radius: 50%;
+      @include theme-prop(border-color, primary-background-color);
+    }
   }
 }
