--- a/src/components/Modal/ModalHeader/ModalHeader.module.scss
+++ b/src/components/Modal/ModalHeader/ModalHeader.module.scss
@@ -9,7 +9,7 @@
   }
 
   .description {
-    margin-block-start: var(--spacing-small);
+    @include theme-prop(color, secondary-text-color);
   }
 
   .closeButton {
