chore: prevent from style injection to explode in server side rendering

--- a/rollup/styleInject.ejs
+++ b/rollup/styleInject.ejs
@@ -1,4 +1,5 @@
 function styleInject(css) {
+    if(!document) return;
     const head = document.head || document.getElementsByTagName('head')[0];
     const id = "<%= hashValue %>";
     const styleExists = head.querySelector("#<%= hashValue %>");
