--- a/src/components/Modal/ModalHeader/ModalHeader.module.scss
+++ b/src/components/Modal/ModalHeader/ModalHeader.module.scss
@@ -8,6 +8,7 @@
   }
 
   .description {
+    margin-block-start: var(--spacing-small);
     @include theme-prop(color, secondary-text-color);
   }
 
