--- a/src/components/Modal/ModalHeader/ModalHeader.module.scss
+++ b/src/components/Modal/ModalHeader/ModalHeader.module.scss
@@ -1,24 +1,15 @@
 @import "../../../styles/typography";
 
 .container {
-  display: flex;
-  align-items: flex-start;
-  flex-direction: column;
-  margin-block-end: var(--spacing-large);
-
-  .title {
-    margin-block-start: var(--spacing-large);
-    margin-block-end: 0;
-    width: calc(100% - 32px);
-  }
+  margin-block-start: var(--spacing-medium);
 
   .icon {
-    vertical-align: middle;
     margin-right: var(--spacing-small);
   }
 
   .description {
     margin-block-start: var(--spacing-small);
+    @include theme-prop(color, secondary-text-color);
   }
 
   .closeButton {
