--- a/src/config/tokens/core/_core-typography.scss
+++ b/src/config/tokens/core/_core-typography.scss
@@ -26,12 +26,12 @@ $font-text2-medium: 600 14px/20px var(--font-family);
 $font-text2-normal: 400 14px/20px var(--font-family);
 
 // Letter spacing definition per semantics atom definitions
-$letter-spacing-h1-bold: -0.2%;
-$letter-spacing-h1-normal: -0.4%;
-$letter-spacing-h1-light: -1.5%;
-$letter-spacing-h2-bold: -0.1%;
-$letter-spacing-h2-normal: -0.5%;
-$letter-spacing-h2-light: -0.8%;
-$letter-spacing-h3-bold: -0.5%;
-$letter-spacing-h3-normal: -0.5%;
-$letter-spacing-h3-light: -0.5%;
+$letter-spacing-h1-bold: -0.5px;
+$letter-spacing-h1-normal: -0.5px;
+$letter-spacing-h1-light: -0.5px;
+$letter-spacing-h2-bold: -0.1px;
+$letter-spacing-h2-normal: -0.1px;
+$letter-spacing-h2-light: -0.1px;
+$letter-spacing-h3-bold: -0.1px;
+$letter-spacing-h3-normal: -0.1px;
+$letter-spacing-h3-light: -0.1px;
