css infra: add version to both css classnames and to id of style name

--- a/rollup/styleInject.ejs
+++ b/rollup/styleInject.ejs
@@ -1,7 +1,7 @@
 function styleInject(css) {
     const head = document.head || document.getElementsByTagName('head')[0];
-    const id = "<%= hashValue %>";
-    const styleExists = head.querySelector("#<%= hashValue %>");
+    const id = "<%= hashValue %>_<%= version %>";
+    const styleExists = head.querySelector("#" + id);
 
     if(styleExists) return;
 
