chore: add version to css class hashes to prevent style collision  (#1463)

--- a/rollup/styleInject.ejs
+++ b/rollup/styleInject.ejs
@@ -1,8 +1,8 @@
 function styleInject(css) {
     if(typeof document === 'undefined') return;
     const head = document.head || document.getElementsByTagName('head')[0];
-    const id = "<%= hashValue %>";
-    const styleExists = head.querySelector("#<%= hashValue %>");
+    const id = "<%= hashValue %>_<%= version %>";
+    const styleExists = head.querySelector("#" + id);
 
     if(styleExists) return;
 
