--- a/src/components/Label/Label.module.scss
+++ b/src/components/Label/Label.module.scss
@@ -31,7 +31,6 @@
 }
 
 .kindFill.colorPrimary {
-  @include theme-prop(color, text-color-on-primary);
   @include theme-prop(background-color, primary-color);
 }
 
@@ -40,7 +39,6 @@
 }
 
 .kindFill.colorDark {
-  @include theme-prop(color, text-color-on-inverted);
   @include theme-prop(background-color, inverted-color-background);
 }
 
@@ -49,7 +47,6 @@
 }
 
 .kindFill.colorNegative {
-  @include theme-prop(color, text-color-on-primary);
   @include theme-prop(background-color, negative-color);
 }
 
@@ -58,7 +55,6 @@
 }
 
 .kindFill.colorPositive {
-  @include theme-prop(color, text-color-on-primary);
   @include theme-prop(background-color, positive-color);
 }
 
@@ -76,7 +72,7 @@
 }
 
 .kindLine.colorPrimary {
-  @include theme-prop(color, primary-color);
+  @include theme-prop(color, primary-color, true);
 }
 
 .kindLine.colorPrimary svg path {
@@ -84,7 +80,7 @@
 }
 
 .kindLine.colorDark {
-  @include theme-prop(color, inverted-color-background);
+  @include theme-prop(color, inverted-color-background, true);
 }
 
 .kindLine.colorDark svg path {
@@ -92,7 +88,7 @@
 }
 
 .kindLine.colorNegative {
-  @include theme-prop(color, negative-color);
+  @include theme-prop(color, negative-color, true);
 }
 
 .kindLine.colorNegative svg path {
@@ -100,7 +96,7 @@
 }
 
 .kindLine.colorPositive {
-  @include theme-prop(color, positive-color);
+  @include theme-prop(color, positive-color, true);
 }
 
 .kindLine.colorPositive svg path {
