--- a/src/components/TextField/TextField.module.scss
+++ b/src/components/TextField/TextField.module.scss
@@ -330,11 +330,10 @@
 input[type="date"]::-webkit-calendar-picker-indicator,
 input[type="datetime-local"]::-webkit-calendar-picker-indicator {
   background: url("./assets/Calendar.svg") no-repeat;
-}
 
-:global(.dark-app-theme, .black-app-theme, .hacker_theme-app-theme) {
-  input[type="date"]::-webkit-calendar-picker-indicator,
-  input[type="datetime-local"]::-webkit-calendar-picker-indicator {
+  :global(.dark-app-theme) &,
+  :global(.black-app-theme) &,
+  :global(.hacker_theme-app-theme) & {
     background: url("./assets/CalendarInverted.svg") no-repeat;
   }
 }
