Remove internal border-radius variables

--- a/src/components/Accordion/Accordion/Accordion.module.scss
+++ b/src/components/Accordion/Accordion/Accordion.module.scss
@@ -6,7 +6,7 @@
   height: fit-content;
   border: 1px solid var(--ui-border-color);
   box-sizing: border-box;
-  border-radius: $border-radius-small;
+  border-radius: var(--border-radius-small);
 }
 
 .accordion .accordionItemExpandCollapse {
