--- a/src/components/Skeleton/Skeleton.module.scss
+++ b/src/components/Skeleton/Skeleton.module.scss
@@ -20,7 +20,7 @@
   }
 }
 
-@mixin skeleton($radius: $border-radius-small) {
+@mixin skeleton($radius: var(--border-radius-small)) {
   @include theme-prop(background, primary-background-hover-color);
   border-radius: $radius;
   @include shine-animation;
