--- a/src/components/Checkbox/Checkbox.module.scss
+++ b/src/components/Checkbox/Checkbox.module.scss
@@ -31,7 +31,7 @@ $checkbox-size: 16px;
   width: $checkbox-size;
   border: 1px solid;
   @include theme-prop(border-color, ui-border-color);
-  border-radius: $border-radius-extra-small;
+  border-radius: 2px;
   transition: transform var(--motion-productive-short) var(--motion-timing-enter);
   position: relative;
   overflow: hidden;
