--- a/src/components/EditableInput/EditableInput.module.scss
+++ b/src/components/EditableInput/EditableInput.module.scss
@@ -12,7 +12,7 @@
   @include heading-padding();
   outline: none;
   border: 1px solid;
-  border-radius: $border-radius-small;
+  border-radius: var(--border-radius-small);
   @include theme-prop(border-color, primary-color);
   vertical-align: top;
   text-align: left;
