--- a/src/components/Heading/Heading.module.scss
+++ b/src/components/Heading/Heading.module.scss
@@ -4,7 +4,7 @@
 
 .headingComponent {
   border: 1px solid transparent;
-  border-radius: $border-radius-small;
+  border-radius: var(--border-radius-small);
   min-width: 0;
   @include heading-padding();
 }
