--- a/src/components/MenuButton/MenuButton.module.scss
+++ b/src/components/MenuButton/MenuButton.module.scss
@@ -6,7 +6,7 @@
 
 .wrapper {
   @include reset-button();
-  border-radius: $border-radius-small;
+  border-radius: var(--border-radius-small);
   background-color: transparent;
   display: flex;
   align-items: center;
