Replace spacing internal variables with monday-ui-style tokens

--- a/src/components/AlertBanner/AlertBanner.module.scss
+++ b/src/components/AlertBanner/AlertBanner.module.scss
@@ -33,7 +33,7 @@
   min-width: 0;
   align-items: center;
   justify-content: center;
-  padding-left: $spacing-medium;
+  padding-left: var(--spacing-medium);
 }
 
 .closeButtonWrapper {
