--- a/src/components/AttentionBox/AttentionBox.module.scss
+++ b/src/components/AttentionBox/AttentionBox.module.scss
@@ -64,8 +64,8 @@
 
 .closeIconWrapper {
   position: absolute;
-  top: $spacing-small-medium;
-  right: $spacing-small-medium;
+  top: 12px;
+  right: 12px;
 }
 
 .closeIconCompact {
