--- a/src/components/ColorPicker/ColorPicker.module.scss
+++ b/src/components/ColorPicker/ColorPicker.module.scss
@@ -2,7 +2,7 @@
 
 .colorPicker.colorPickerDialogContent {
   z-index: 1;
-  padding: $spacing-small-medium;
+  padding: 12px;
   display: flex;
   justify-content: center;
   align-items: center;
