--- a/src/components/ColorPicker/components/ColorPickerContent/ColorPickerClearButton.module.scss
+++ b/src/components/ColorPicker/components/ColorPickerContent/ColorPickerClearButton.module.scss
@@ -3,9 +3,9 @@
 @import "../../../../styles/themes";
 
 .clearColorIcon {
-  margin-right: $spacing-small;
+  margin-right: var(--spacing-small);
 }
 
 .clearColorButton {
-  margin-top: $spacing-small;
+  margin-top: var(--spacing-small);
 }
