--- a/src/components/Link/Link.module.scss
+++ b/src/components/Link/Link.module.scss
@@ -30,12 +30,12 @@
 
 .iconStart {
   line-height: 24px;
-  margin-right: $spacing-small;
+  margin-right: var(--spacing-small);
 }
 
 .iconEnd {
   line-height: 24px;
-  margin-left: $spacing-small;
+  margin-left: var(--spacing-small);
 }
 
 @supports (margin-inline-start: initial) {
