--- a/src/components/Menu/MenuItem/MenuItem.module.scss
+++ b/src/components/Menu/MenuItem/MenuItem.module.scss
@@ -17,11 +17,11 @@
 }
 
 .iconWrapper {
-  margin-right: $spacing-small;
+  margin-right: var(--spacing-small);
 }
 
 .subMenuIconWrapper {
-  margin-left: $spacing-xs;
+  margin-left: var(--spacing-xs);
 }
 
 .subMenuIconWrapper,
