--- a/src/components/Steps/StepsCommand.module.scss
+++ b/src/components/Steps/StepsCommand.module.scss
@@ -14,7 +14,7 @@
     flex-direction: row-reverse;
   }
   &.icon {
-    margin-right: $spacing-small-medium;
+    margin-right: 12px;
   }
 }
 
@@ -23,7 +23,7 @@
     margin-left: var(--spacing-small);
   }
   &.icon {
-    margin-left: $spacing-small-medium;
+    margin-left: 12px;
   }
 }
 
