--- a/src/storybook/stand-alone-documentaion/shadow/shadow-levels/shadow-example/shadow-example.scss
+++ b/src/storybook/stand-alone-documentaion/shadow/shadow-levels/shadow-example/shadow-example.scss
@@ -34,7 +34,7 @@
   &_title {
     @include shadow-example-text;
     font-weight: 500;
-    margin: $spacing-small 0;
+    margin: var(--spacing-small) 0;
   }
 
   &_code {
